--- a/valdapp/app/templates/home.html
+++ b/valdapp/app/templates/home.html
@@ -1,6 +1,8 @@
 {% extends "conteneur.html" %}
 {% block corps %}
 <div>
-HOME
+<p>
+	À l’occasion du bicentenaire de l’École nationale des chartes, l’ADEMEC, en partenariat et avec l’aide de l’École, organise un « hackathon bicentenaire ». L’objectif du hackathon est de proposer des créations numériques mettant en valeur les données sélectionnées, pour aborder l’histoire de l’École et sa production scientifique.
+</p>
 </div>
 {% endblock %}
