update le monde des chartistes

--- a/valdapp/app/templates/conteneur.html
+++ b/valdapp/app/templates/conteneur.html
@@ -12,11 +12,8 @@
 			<header>
 					<div style="text-align: center; margin-bottom: 2%;">
         				<h1>
-        	    			<a href="{{url_for('home')}}"><i>L'École des chartes</i></a>
+        	    			<a href="{{url_for('home')}}">Le monde des chartistes</a>
         	    		</h1>
-        	    		<h2>
-        	    			vue par Jules Quicherat
-        			    </h2>
         			</div>
 {% block corps%}{%endblock%}
 <footer>
