--- a/valdapp/app/templates/home.html
+++ b/valdapp/app/templates/home.html
@@ -18,7 +18,7 @@
               var geojson = L.geoJson(data, {
                   onEachFeature: function (feature, layer) {
         // layer.bindPopup(feature.properties.Area_Name);
-        layer.bindPopup('<center><p>' + feature.properties.Places + '</p>');
+        layer.bindPopup('<center><p>' + feature.properties.Places + '</p></center><p>' + feature.properties.Lieux + "</p>" );
   }
 });
 
