--- a/valdapp/app/templates/conteneur.html
+++ b/valdapp/app/templates/conteneur.html
@@ -14,6 +14,9 @@
         				<h1>
         	    			<a href="{{url_for('home')}}">Le monde des chartistes</a>
         	    		</h1>
+        	    		<h2>
+        	    			Une réalisation de l'équipe « VALDA » du hackathon ADEMEC
+        	    		</h2>
         			</div>
 {% block corps%}{%endblock%}
 <footer>
