addink horizon link

--- a/valdapp/app/templates/home.html
+++ b/valdapp/app/templates/home.html
@@ -37,6 +37,10 @@
     <a href="{{url_for('lingua')}}" target="_blank"><img src="../static/img/Tf-IDF-periode.png"></a>
     <p><a href="{{url_for('lingua')}}" target="_blank">Cliquez pour accéder aux analyses linguistiques !</a></p>
   </div>
+  <div>
+    <a href="{{url_for('horizon')}}" target="_blank"><img src="../static/img/Decision_plot.png"></a>
+    <p><a href="{{url_for('horizon')}}" target="_blank">Cliquez pour accéder aux perspectives du projet !</a></p>
+  </div>
   <script>
       window.onload = function () {
         var basemap = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
